tests/compile-fail/Rule_18_7.rs
fn main() {
    let a: [u32];
    //~^ ERROR the size for value values of type `[u32]` cannot be known at compilation time
}
